@@ -23,6 +23,8 @@ At least, you had better search '[INCOMPATIBLE CHANGES]' for each version.
 Version 4.1.1 - *******, 2001, by Shigio Yamaguchi
 
 * configure: bug fixed. now you can build project other than source directory.
+* htags: generates rebuild.sh to redo the job with the same options and
+  config variables.
 * globash.rc: when GTAGSROOT specified, prompt is changed to "$root!$cwd"
   instead of "[$root]/...".
 * globash.rc: bug fixed. number was ignored in 'next <no>' and 'prev <no>'.
